# jack-in-the-box

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
devops/scripts/: run_pylint.sh
jitb/: __init__.py  __main__.py  jitb_args.py  jitb_argvals.py  jitb_globals.py  jitb_logger.py  jitb_main.py  jitb_misc.py  jitb_openai.py  jitb_selenium.py  jitb_validation.py  jitb_webdriver.py  jitb_website.py
jitb/jbgames/: jbg_abc.py  jbg_br.py  jbg_dict.py  jbg_jb.py  jbg_page_ids.py  jbg_q2.py  jbg_q3.py
lib/: hobo-1.2.0-py3-none-any.whl  hobo-1.3.0-py3-none-any.whl  test-1.3.0-py3-none-any.whl
logs/: .placeholder  jitb_20240318_232145-0-DEBUGGING.txt
test/: __main__.py  loader.py  mocked_jitb_ai.py
test/test_input/: JackboxTV-BR-1a-Login_Page-pre_login.html  JackboxTV-BR-1b-Login_Page-waiting.html  JackboxTV-BR-2-Choose_Prompt.html  JackboxTV-BR-2b-Choose_Prompt-waiting.html  JackboxTV-BR-3-Make_Sentence.html  JackboxTV-BR-4a-Describe.html  JackboxTV-BR-4b-Describe.html  JackboxTV-BR-4c-Describe.html  JackboxTV-BR-4d-Describe.html  JackboxTV-BR-4e-Describe.html  JackboxTV-BR-5a-Guess.html  JackboxTV-BR-5b-Guess.html  JackboxTV-BR-5c-Guess.html  JackboxTV-BR-5d-Guess.html  JackboxTV-BR-6a-Guess_Place.html  JackboxTV-BR-6b-Guess_Place.html  JackboxTV-BR-6c-Guess_Place-guessed_wrong.html  JackboxTV-BR-6d-Guess_Place.html  JackboxTV-BR-6e-Guess_Place-guessed_wrong.html  JackboxTV-BR-6f-Guess_Place-guessed_right-waiting.html  JackboxTV-BR-7a-Describe_thing.html  JackboxTV-BR-8-Whose_fault_is_it.html  JackboxTV-BR-9-Whose_fault_is_it.html  (+121 more)
(+101 files in other folders)
